examples/test/testpolicy8513.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8513
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key6: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value49
          key2: value31
          key19: value1
      podSelector:
        matchLabels:
          key21: value29
          key20: value33
